--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@theatre/core": "^0.7.0",
     "@theatre/studio": "^0.7.0",
+    "dat.gui": "^0.7.9",
     "gsap": "^3.12.2",
     "three": "^0.156.1"
   }
